Change button width to 220px (fixes button issue on firefox)

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -117,6 +117,6 @@ h5 {
     border-radius: 2px;   
     font-size: 20px;
     height: 75px;
-    width: 250px;
+    width: 220px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
